[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/objects/trash/magazine.png" type="Texture" id=1]
[ext_resource path="res://UI/shop/ShopItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/themes/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/roboto_42.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/shop/sorting shop/SortingUpgradeShop.gd" type="Script" id=5]
[ext_resource path="res://UI/dashboard/ResourceBar.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.552941, 0.552941, 0.564706, 1 )

[node name="PaperUpgradeShop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
greeting = "Nice day ain't it?"
buy_reaction = "Pleasure doing business!"

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Shopkeep" type="Control" parent="."]
margin_top = 500.0
margin_right = 600.0
margin_bottom = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Shopkeep"]
margin_top = 226.0
margin_right = 600.0
margin_bottom = 524.0

[node name="Avatar" type="TextureRect" parent="Shopkeep"]
margin_left = -88.9436
margin_top = -62.121
margin_right = 302.056
margin_bottom = 328.879
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Shopkeep"]
margin_top = 303.0
margin_right = 600.0
margin_bottom = 475.0
custom_fonts/font = ExtResource( 4 )
text = "How's it going?"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopList" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="ShopList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_top = 69.9165
margin_right = -55.0
margin_bottom = -55.0834
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemVBox" type="VBoxContainer" parent="ShopList/ScrollContainer"]
margin_right = 490.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreTrash" parent="ShopList/ScrollContainer/ItemVBox" instance=ExtResource( 2 )]
margin_right = 490.0
item_id = "paper_double_jump"
item_name = "Double Jump"
description = "Hire only the best jumpers"
price = {
"dollars": 500
}

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.794597
anchor_top = 0.639403
anchor_right = 0.971264
anchor_bottom = 0.69409
custom_fonts/font = ExtResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ResourceBar" parent="." instance=ExtResource( 6 )]
